fix: profile__about align self center added

--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -12,10 +12,10 @@
 
 @media screen and (max-width:767px) {
     .profile__about{
+        align-self: center;
         max-width: 282px;
         font-size: 14px;
         line-height: 17px;
-        text-align: center;
         margin-top: 14px;
     }
   }
